Update OAuth, unfinished

--- a/aula13/auth.html
+++ b/aula13/auth.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="referrer" content="no-referrer-when-downgrade">
     <title>Autenticação oAuth</title>
 </head>
 <body>
-    <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <script src="https://accounts.google.com/gsi/client" async defer ></script>
     <div id="g_id_onload"
        data-client_id="980205035441-gmvj389h1q3tg6rg1b74bpi7fbr4686i.apps.googleusercontent.com"
-       data-login_uri="http://localhost:8080/Javascript/aula13/auth.html"
+       data-login_uri="http://localhost:8080"
        data-auto_prompt="false">
     </div>
     <div class="g_id_signin"
