--- a/aula13/auth.html
+++ b/aula13/auth.html
@@ -8,10 +8,11 @@
     <title>Autenticação oAuth</title>
 </head>
 <body>
+    <h1>Fazer Login</h1>
     <script src="https://accounts.google.com/gsi/client" async defer ></script>
     <div id="g_id_onload"
        data-client_id="980205035441-gmvj389h1q3tg6rg1b74bpi7fbr4686i.apps.googleusercontent.com"
-       data-login_uri="http://localhost:8080"
+       data-login_uri="http://localhost:8080/Javascript/aula13/welcome.html"
        data-auto_prompt="false">
     </div>
     <div class="g_id_signin"
@@ -20,7 +21,8 @@
        data-theme="outline"
        data-text="sign_in_with"
        data-shape="rectangular"
-       data-logo_alignment="left">
+       data-logo_alignment="left"
+       data-width="200">
     </div>
 </body>
 </html>
