--- a/aula13/welcome.html
+++ b/aula13/welcome.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <h1>Bem vindo</h1>
+    <script src="https://accounts.google.com/gsi/client" async defer ></script>
+    <script src="decode.js"></script>
+    
 </body>
 </html>
